# test

./: meson.build
Po/: it.po
data/: meson.build
po/: LINGUAS  POTFILES  com.github.alecaddd.jarvis.pot  it.po  meson.build
src/: application.vala  main.vala  meson.build  mywidget.ui  mywidget.ui~  mywidget.vala  window.vala
vapi/: config.vapi
